[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/Themes_v2/UNIVERSAL/VScrollBar.tres" type="Theme" id=1]
[ext_resource path="res://assets/Fonts_v2/FontThemes/MainMiddle.tres" type="DynamicFont" id=2]
[ext_resource path="res://gui_modules/Mansion/Scripts/hard_tutorial_panel.gd" type="Script" id=3]
[ext_resource path="res://assets/images/buttons/main screen/speednorm1.png" type="Texture" id=4]
[ext_resource path="res://assets/images/buttons/main screen/speednorm0.png" type="Texture" id=5]
[ext_resource path="res://assets/images/buttons/main screen/speednorm2.png" type="Texture" id=6]
[ext_resource path="res://assets/Textures_v2/back_charinfo.png" type="Texture" id=7]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/Panel_Square.tres" type="StyleBox" id=8]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/buttonbig_decor_pressed.png" type="Texture" id=9]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/buttonbig_decor_hover.png" type="Texture" id=10]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/buttonbig_decor.png" type="Texture" id=11]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/ConfirmWindowTheme.tres" type="Theme" id=12]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.643137, 0.00392157, 0.00392157, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="hard_tut" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )

[node name="highlight" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="highlight1" type="ColorRect" parent="highlight"]
margin_right = 532.0
margin_bottom = 1080.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.478431 )

[node name="highlight2" type="ColorRect" parent="highlight"]
margin_left = 653.0
margin_right = 1907.0
margin_bottom = 1080.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.478431 )

[node name="highlight3" type="ColorRect" parent="highlight"]
margin_left = 539.0
margin_top = 684.0
margin_right = 660.0
margin_bottom = 1074.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.478431 )

[node name="highlight4" type="ColorRect" parent="highlight"]
margin_left = 521.0
margin_right = 654.0
margin_bottom = 597.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.478431 )

[node name="borders" type="Panel" parent="highlight"]
margin_left = 524.0
margin_top = 597.0
margin_right = 654.0
margin_bottom = 683.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="panel" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -227.0
margin_top = -84.0
margin_right = 226.0
margin_bottom = -44.0
mouse_filter = 2

[node name="Label" type="RichTextLabel" parent="panel"]
margin_right = 453.0
margin_bottom = 34.0
rect_clip_content = false
theme = ExtResource( 1 )
custom_colors/default_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "test test test"
text = "test test test"
fit_content_height = true
scroll_active = false

[node name="Panel" type="Panel" parent="panel/Label"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
custom_styles/panel = ExtResource( 8 )

[node name="TextureRect" type="TextureRect" parent="panel/Label/Panel"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true

[node name="next" type="TextureButton" parent="panel/Label/Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -43.0
margin_top = -27.0
margin_right = -12.0
margin_bottom = -7.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 4 )
expand = true
stretch_mode = 4

[node name="abort_panel" type="Popup" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -262.0
margin_top = -119.5
margin_right = 262.0
margin_bottom = 119.5
theme = ExtResource( 12 )
popup_exclusive = true

[node name="RichTextLabel" type="Label" parent="abort_panel"]
margin_left = 53.0
margin_top = 34.9474
margin_right = 477.0
margin_bottom = 138.947
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "ABORTTUTORIAL"
align = 1

[node name="TextureRect" type="Panel" parent="abort_panel/RichTextLabel"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -53.0
margin_top = -35.0
margin_right = 47.0
margin_bottom = 100.0

[node name="ButtonL" type="TextureButton" parent="abort_panel/RichTextLabel/TextureRect"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 26.0
margin_top = -74.9474
margin_right = 236.0
margin_bottom = -16.9474
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 10 )

[node name="Label" type="Label" parent="abort_panel/RichTextLabel/TextureRect/ButtonL"]
margin_left = 12.0
margin_right = 202.0
margin_bottom = 58.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "YES"
align = 1
valign = 1

[node name="ButtonR" type="TextureButton" parent="abort_panel/RichTextLabel/TextureRect"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -233.0
margin_top = -74.9474
margin_right = -23.0
margin_bottom = -16.9474
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 10 )

[node name="Label" type="Label" parent="abort_panel/RichTextLabel/TextureRect/ButtonR"]
margin_left = 10.0
margin_right = 201.0
margin_bottom = 58.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "NO"
align = 1
valign = 1
